auto-consolidate HasDirectSuper

--- a/spec.html
+++ b/spec.html
@@ -9315,6 +9315,41 @@
       1. Return _F_.
     </emu-alg>
   </emu-clause>
+
+  <emu-clause id="sec-static-semantics-hasdirectsuper" type="sdo" aoid="HasDirectSuper">
+    <h1>Static Semantics: HasDirectSuper</h1>
+    <emu-grammar>MethodDefinition : PropertyName `(` UniqueFormalParameters `)` `{` FunctionBody `}`</emu-grammar>
+    <emu-alg>
+      1. If |UniqueFormalParameters| Contains |SuperCall| is *true*, return *true*.
+      1. Return |FunctionBody| Contains |SuperCall|.
+    </emu-alg>
+    <emu-grammar>MethodDefinition : `get` PropertyName `(` `)` `{` FunctionBody `}`</emu-grammar>
+    <emu-alg>
+      1. Return |FunctionBody| Contains |SuperCall|.
+    </emu-alg>
+    <emu-grammar>MethodDefinition : `set` PropertyName `(` PropertySetParameterList `)` `{` FunctionBody `}`</emu-grammar>
+    <emu-alg>
+      1. If |PropertySetParameterList| Contains |SuperCall| is *true*, return *true*.
+      1. Return |FunctionBody| Contains |SuperCall|.
+    </emu-alg>
+    <emu-grammar>GeneratorMethod : `*` PropertyName `(` UniqueFormalParameters `)` `{` GeneratorBody `}`</emu-grammar>
+    <emu-alg>
+      1. If |UniqueFormalParameters| Contains |SuperCall| is *true*, return *true*.
+      1. Return |GeneratorBody| Contains |SuperCall|.
+    </emu-alg>
+    <emu-grammar>AsyncGeneratorMethod : `async` `*` PropertyName `(` UniqueFormalParameters `)` `{` AsyncGeneratorBody `}`</emu-grammar>
+    <emu-alg>
+      1. If |UniqueFormalParameters| Contains |SuperCall| is *true*, return *true*.
+      1. Return |AsyncGeneratorBody| Contains |SuperCall|.
+    </emu-alg>
+    <emu-grammar>
+      AsyncMethod : `async` PropertyName `(` UniqueFormalParameters `)` `{` AsyncFunctionBody `}`
+    </emu-grammar>
+    <emu-alg>
+      1. If |UniqueFormalParameters| Contains |SuperCall| is *true*, return *true*.
+      1. Return |AsyncFunctionBody| Contains |SuperCall|.
+    </emu-alg>
+  </emu-clause>
 <!-- insert sdos here -->
 </emu-clause>
 
@@ -20181,25 +20216,6 @@
       </ul>
     </emu-clause>
 
-    <emu-clause id="sec-method-definitions-static-semantics-hasdirectsuper">
-      <h1>Static Semantics: HasDirectSuper</h1>
-      <emu-see-also-para op="HasDirectSuper"></emu-see-also-para>
-      <emu-grammar>MethodDefinition : PropertyName `(` UniqueFormalParameters `)` `{` FunctionBody `}`</emu-grammar>
-      <emu-alg>
-        1. If |UniqueFormalParameters| Contains |SuperCall| is *true*, return *true*.
-        1. Return |FunctionBody| Contains |SuperCall|.
-      </emu-alg>
-      <emu-grammar>MethodDefinition : `get` PropertyName `(` `)` `{` FunctionBody `}`</emu-grammar>
-      <emu-alg>
-        1. Return |FunctionBody| Contains |SuperCall|.
-      </emu-alg>
-      <emu-grammar>MethodDefinition : `set` PropertyName `(` PropertySetParameterList `)` `{` FunctionBody `}`</emu-grammar>
-      <emu-alg>
-        1. If |PropertySetParameterList| Contains |SuperCall| is *true*, return *true*.
-        1. Return |FunctionBody| Contains |SuperCall|.
-      </emu-alg>
-    </emu-clause>
-
     <emu-clause id="sec-static-semantics-specialmethod">
       <h1>Static Semantics: SpecialMethod</h1>
       <emu-grammar>MethodDefinition : PropertyName `(` UniqueFormalParameters `)` `{` FunctionBody `}`</emu-grammar>
@@ -20324,16 +20340,6 @@
           It is a Syntax Error if |GeneratorBody| Contains |SuperCall| is *true*.
         </li>
       </ul>
-    </emu-clause>
-
-    <emu-clause id="sec-generator-function-definitions-static-semantics-hasdirectsuper">
-      <h1>Static Semantics: HasDirectSuper</h1>
-      <emu-see-also-para op="HasDirectSuper"></emu-see-also-para>
-      <emu-grammar>GeneratorMethod : `*` PropertyName `(` UniqueFormalParameters `)` `{` GeneratorBody `}`</emu-grammar>
-      <emu-alg>
-        1. If |UniqueFormalParameters| Contains |SuperCall| is *true*, return *true*.
-        1. Return |GeneratorBody| Contains |SuperCall|.
-      </emu-alg>
     </emu-clause>
 
     <emu-clause id="sec-generator-function-definitions-runtime-semantics-evaluation">
@@ -20482,16 +20488,6 @@
         <li>It is a Syntax Error if |FormalParameters| Contains |SuperCall| is *true*.</li>
         <li>It is a Syntax Error if |AsyncGeneratorBody| Contains |SuperCall| is *true*.</li>
       </ul>
-    </emu-clause>
-
-    <emu-clause id="sec-async-generator-function-definitions-static-semantics-hasdirectsuper">
-      <h1>Static Semantics: HasDirectSuper</h1>
-      <emu-see-also-para op="HasDirectSuper"></emu-see-also-para>
-      <emu-grammar>AsyncGeneratorMethod : `async` `*` PropertyName `(` UniqueFormalParameters `)` `{` AsyncGeneratorBody `}`</emu-grammar>
-      <emu-alg>
-        1. If |UniqueFormalParameters| Contains |SuperCall| is *true*, return *true*.
-        1. Return |AsyncGeneratorBody| Contains |SuperCall|.
-      </emu-alg>
     </emu-clause>
 
     <emu-clause id="sec-asyncgenerator-definitions-evaluation">
@@ -20865,17 +20861,6 @@
         <li>It is a Syntax Error if |FormalParameters| Contains |SuperCall| is *true*.</li>
         <li>It is a Syntax Error if |AsyncFunctionBody| Contains |SuperCall| is *true*.</li>
       </ul>
-    </emu-clause>
-
-    <emu-clause id="sec-async-function-definitions-static-semantics-HasDirectSuper">
-      <h1>Static Semantics: HasDirectSuper</h1>
-      <emu-grammar>
-        AsyncMethod : `async` PropertyName `(` UniqueFormalParameters `)` `{` AsyncFunctionBody `}`
-      </emu-grammar>
-      <emu-alg>
-        1. If |UniqueFormalParameters| Contains |SuperCall| is *true*, return *true*.
-        1. Return |AsyncFunctionBody| Contains |SuperCall|.
-      </emu-alg>
     </emu-clause>
 
     <emu-clause id="sec-async-function-definitions-runtime-semantics-evaluation">
