--- a/spec.html
+++ b/spec.html
@@ -9350,6 +9350,74 @@
       1. Return |AsyncFunctionBody| Contains |SuperCall|.
     </emu-alg>
   </emu-clause>
+
+  <emu-clause id="sec-static-semantics-exportedbindings" type="sdo" aoid="ExportedBindings">
+    <h1>Static Semantics: ExportedBindings</h1>
+    <emu-note>
+      <p>ExportedBindings are the locally bound names that are explicitly associated with a |Module|'s ExportedNames.</p>
+    </emu-note>
+    <emu-grammar>ModuleItemList : ModuleItemList ModuleItem</emu-grammar>
+    <emu-alg>
+      1. Let _names_ be ExportedBindings of |ModuleItemList|.
+      1. Append to _names_ the elements of the ExportedBindings of |ModuleItem|.
+      1. Return _names_.
+    </emu-alg>
+    <emu-grammar>
+      ModuleItem :
+        ImportDeclaration
+        StatementListItem
+    </emu-grammar>
+    <emu-alg>
+      1. Return a new empty List.
+    </emu-alg>
+    <emu-grammar>
+      ExportDeclaration :
+        `export` ExportFromClause FromClause `;`
+    </emu-grammar>
+    <emu-alg>
+      1. Return a new empty List.
+    </emu-alg>
+    <emu-grammar>ExportDeclaration : `export` NamedExports `;`</emu-grammar>
+    <emu-alg>
+      1. Return the ExportedBindings of |NamedExports|.
+    </emu-alg>
+    <emu-grammar>ExportDeclaration : `export` VariableStatement</emu-grammar>
+    <emu-alg>
+      1. Return the BoundNames of |VariableStatement|.
+    </emu-alg>
+    <emu-grammar>ExportDeclaration : `export` Declaration</emu-grammar>
+    <emu-alg>
+      1. Return the BoundNames of |Declaration|.
+    </emu-alg>
+    <emu-grammar>
+      ExportDeclaration : `export` `default` HoistableDeclaration
+
+      ExportDeclaration : `export` `default` ClassDeclaration
+
+      ExportDeclaration : `export` `default` AssignmentExpression `;`
+    </emu-grammar>
+    <emu-alg>
+      1. Return the BoundNames of this |ExportDeclaration|.
+    </emu-alg>
+    <emu-grammar>NamedExports : `{` `}`</emu-grammar>
+    <emu-alg>
+      1. Return a new empty List.
+    </emu-alg>
+    <emu-grammar>ExportsList : ExportsList `,` ExportSpecifier</emu-grammar>
+    <emu-alg>
+      1. Let _names_ be the ExportedBindings of |ExportsList|.
+      1. Append to _names_ the elements of the ExportedBindings of |ExportSpecifier|.
+      1. Return _names_.
+    </emu-alg>
+    <emu-grammar>ExportSpecifier : IdentifierName</emu-grammar>
+    <emu-alg>
+      1. Return a List whose sole element is the StringValue of |IdentifierName|.
+    </emu-alg>
+    <emu-grammar>ExportSpecifier : IdentifierName `as` IdentifierName</emu-grammar>
+    <emu-alg>
+      1. Return a List whose sole element is the StringValue of the first |IdentifierName|.
+    </emu-alg>
+  </emu-clause>
 <!-- insert sdos here -->
 </emu-clause>
 
@@ -21646,28 +21714,6 @@
         </emu-note>
       </emu-clause>
 
-      <emu-clause id="sec-module-semantics-static-semantics-exportedbindings">
-        <h1>Static Semantics: ExportedBindings</h1>
-        <emu-see-also-para op="ExportedBindings"></emu-see-also-para>
-        <emu-note>
-          <p>ExportedBindings are the locally bound names that are explicitly associated with a |Module|'s ExportedNames.</p>
-        </emu-note>
-        <emu-grammar>ModuleItemList : ModuleItemList ModuleItem</emu-grammar>
-        <emu-alg>
-          1. Let _names_ be ExportedBindings of |ModuleItemList|.
-          1. Append to _names_ the elements of the ExportedBindings of |ModuleItem|.
-          1. Return _names_.
-        </emu-alg>
-        <emu-grammar>
-          ModuleItem :
-            ImportDeclaration
-            StatementListItem
-        </emu-grammar>
-        <emu-alg>
-          1. Return a new empty List.
-        </emu-alg>
-      </emu-clause>
-
       <emu-clause id="sec-module-semantics-static-semantics-exportednames">
         <h1>Static Semantics: ExportedNames</h1>
         <emu-see-also-para op="ExportedNames"></emu-see-also-para>
@@ -23180,58 +23226,6 @@
         <emu-note>
           <p>The above rule means that each ReferencedBindings of |NamedExports| is treated as an |IdentifierReference|.</p>
         </emu-note>
-      </emu-clause>
-
-      <emu-clause id="sec-exports-static-semantics-exportedbindings">
-        <h1>Static Semantics: ExportedBindings</h1>
-        <emu-see-also-para op="ExportedBindings"></emu-see-also-para>
-        <emu-grammar>
-          ExportDeclaration :
-            `export` ExportFromClause FromClause `;`
-        </emu-grammar>
-        <emu-alg>
-          1. Return a new empty List.
-        </emu-alg>
-        <emu-grammar>ExportDeclaration : `export` NamedExports `;`</emu-grammar>
-        <emu-alg>
-          1. Return the ExportedBindings of |NamedExports|.
-        </emu-alg>
-        <emu-grammar>ExportDeclaration : `export` VariableStatement</emu-grammar>
-        <emu-alg>
-          1. Return the BoundNames of |VariableStatement|.
-        </emu-alg>
-        <emu-grammar>ExportDeclaration : `export` Declaration</emu-grammar>
-        <emu-alg>
-          1. Return the BoundNames of |Declaration|.
-        </emu-alg>
-        <emu-grammar>
-          ExportDeclaration : `export` `default` HoistableDeclaration
-
-          ExportDeclaration : `export` `default` ClassDeclaration
-
-          ExportDeclaration : `export` `default` AssignmentExpression `;`
-        </emu-grammar>
-        <emu-alg>
-          1. Return the BoundNames of this |ExportDeclaration|.
-        </emu-alg>
-        <emu-grammar>NamedExports : `{` `}`</emu-grammar>
-        <emu-alg>
-          1. Return a new empty List.
-        </emu-alg>
-        <emu-grammar>ExportsList : ExportsList `,` ExportSpecifier</emu-grammar>
-        <emu-alg>
-          1. Let _names_ be the ExportedBindings of |ExportsList|.
-          1. Append to _names_ the elements of the ExportedBindings of |ExportSpecifier|.
-          1. Return _names_.
-        </emu-alg>
-        <emu-grammar>ExportSpecifier : IdentifierName</emu-grammar>
-        <emu-alg>
-          1. Return a List whose sole element is the StringValue of |IdentifierName|.
-        </emu-alg>
-        <emu-grammar>ExportSpecifier : IdentifierName `as` IdentifierName</emu-grammar>
-        <emu-alg>
-          1. Return a List whose sole element is the StringValue of the first |IdentifierName|.
-        </emu-alg>
       </emu-clause>
 
       <emu-clause id="sec-exports-static-semantics-exportednames">
