--- a/spec.html
+++ b/spec.html
@@ -9418,6 +9418,83 @@
       1. Return a List whose sole element is the StringValue of the first |IdentifierName|.
     </emu-alg>
   </emu-clause>
+
+  <emu-clause id="sec-static-semantics-exportednames" type="sdo" aoid="ExportedNames">
+    <h1>Static Semantics: ExportedNames</h1>
+    <emu-note>
+      <p>ExportedNames are the externally visible names that a |Module| explicitly maps to one of its local name bindings.</p>
+    </emu-note>
+    <emu-grammar>ModuleItemList : ModuleItemList ModuleItem</emu-grammar>
+    <emu-alg>
+      1. Let _names_ be ExportedNames of |ModuleItemList|.
+      1. Append to _names_ the elements of the ExportedNames of |ModuleItem|.
+      1. Return _names_.
+    </emu-alg>
+    <emu-grammar>ModuleItem : ExportDeclaration</emu-grammar>
+    <emu-alg>
+      1. Return the ExportedNames of |ExportDeclaration|.
+    </emu-alg>
+    <emu-grammar>
+      ModuleItem :
+        ImportDeclaration
+        StatementListItem
+    </emu-grammar>
+    <emu-alg>
+      1. Return a new empty List.
+    </emu-alg>
+    <emu-grammar>ExportDeclaration : `export` ExportFromClause FromClause `;`</emu-grammar>
+    <emu-alg>
+      1. Return the ExportedNames of |ExportFromClause|.
+    </emu-alg>
+    <emu-grammar>ExportFromClause : `*`</emu-grammar>
+    <emu-alg>
+      1. Return a new empty List.
+    </emu-alg>
+    <emu-grammar>ExportFromClause : `*` `as` IdentifierName</emu-grammar>
+    <emu-alg>
+      1. Return a List whose sole element is the StringValue of |IdentifierName|.
+    </emu-alg>
+    <emu-grammar>ExportFromClause : NamedExports</emu-grammar>
+    <emu-alg>
+      1. Return the ExportedNames of |NamedExports|.
+    </emu-alg>
+    <emu-grammar>ExportDeclaration : `export` VariableStatement</emu-grammar>
+    <emu-alg>
+      1. Return the BoundNames of |VariableStatement|.
+    </emu-alg>
+    <emu-grammar>ExportDeclaration : `export` Declaration</emu-grammar>
+    <emu-alg>
+      1. Return the BoundNames of |Declaration|.
+    </emu-alg>
+    <emu-grammar>
+      ExportDeclaration : `export` `default` HoistableDeclaration
+
+      ExportDeclaration : `export` `default` ClassDeclaration
+
+      ExportDeclaration : `export` `default` AssignmentExpression `;`
+    </emu-grammar>
+    <emu-alg>
+      1. Return &laquo; *"default"* &raquo;.
+    </emu-alg>
+    <emu-grammar>NamedExports : `{` `}`</emu-grammar>
+    <emu-alg>
+      1. Return a new empty List.
+    </emu-alg>
+    <emu-grammar>ExportsList : ExportsList `,` ExportSpecifier</emu-grammar>
+    <emu-alg>
+      1. Let _names_ be the ExportedNames of |ExportsList|.
+      1. Append to _names_ the elements of the ExportedNames of |ExportSpecifier|.
+      1. Return _names_.
+    </emu-alg>
+    <emu-grammar>ExportSpecifier : IdentifierName</emu-grammar>
+    <emu-alg>
+      1. Return a List whose sole element is the StringValue of |IdentifierName|.
+    </emu-alg>
+    <emu-grammar>ExportSpecifier : IdentifierName `as` IdentifierName</emu-grammar>
+    <emu-alg>
+      1. Return a List whose sole element is the StringValue of the second |IdentifierName|.
+    </emu-alg>
+  </emu-clause>
 <!-- insert sdos here -->
 </emu-clause>
 
@@ -21714,32 +21791,6 @@
         </emu-note>
       </emu-clause>
 
-      <emu-clause id="sec-module-semantics-static-semantics-exportednames">
-        <h1>Static Semantics: ExportedNames</h1>
-        <emu-see-also-para op="ExportedNames"></emu-see-also-para>
-        <emu-note>
-          <p>ExportedNames are the externally visible names that a |Module| explicitly maps to one of its local name bindings.</p>
-        </emu-note>
-        <emu-grammar>ModuleItemList : ModuleItemList ModuleItem</emu-grammar>
-        <emu-alg>
-          1. Let _names_ be ExportedNames of |ModuleItemList|.
-          1. Append to _names_ the elements of the ExportedNames of |ModuleItem|.
-          1. Return _names_.
-        </emu-alg>
-        <emu-grammar>ModuleItem : ExportDeclaration</emu-grammar>
-        <emu-alg>
-          1. Return the ExportedNames of |ExportDeclaration|.
-        </emu-alg>
-        <emu-grammar>
-          ModuleItem :
-            ImportDeclaration
-            StatementListItem
-        </emu-grammar>
-        <emu-alg>
-          1. Return a new empty List.
-        </emu-alg>
-      </emu-clause>
-
       <emu-clause id="sec-module-semantics-static-semantics-exportentries">
         <h1>Static Semantics: ExportEntries</h1>
         <emu-see-also-para op="ExportEntries"></emu-see-also-para>
@@ -23226,63 +23277,6 @@
         <emu-note>
           <p>The above rule means that each ReferencedBindings of |NamedExports| is treated as an |IdentifierReference|.</p>
         </emu-note>
-      </emu-clause>
-
-      <emu-clause id="sec-exports-static-semantics-exportednames">
-        <h1>Static Semantics: ExportedNames</h1>
-        <emu-see-also-para op="ExportedNames"></emu-see-also-para>
-        <emu-grammar>ExportDeclaration : `export` ExportFromClause FromClause `;`</emu-grammar>
-        <emu-alg>
-          1. Return the ExportedNames of |ExportFromClause|.
-        </emu-alg>
-        <emu-grammar>ExportFromClause : `*`</emu-grammar>
-        <emu-alg>
-          1. Return a new empty List.
-        </emu-alg>
-        <emu-grammar>ExportFromClause : `*` `as` IdentifierName</emu-grammar>
-        <emu-alg>
-          1. Return a List whose sole element is the StringValue of |IdentifierName|.
-        </emu-alg>
-        <emu-grammar>ExportFromClause : NamedExports</emu-grammar>
-        <emu-alg>
-          1. Return the ExportedNames of |NamedExports|.
-        </emu-alg>
-        <emu-grammar>ExportDeclaration : `export` VariableStatement</emu-grammar>
-        <emu-alg>
-          1. Return the BoundNames of |VariableStatement|.
-        </emu-alg>
-        <emu-grammar>ExportDeclaration : `export` Declaration</emu-grammar>
-        <emu-alg>
-          1. Return the BoundNames of |Declaration|.
-        </emu-alg>
-        <emu-grammar>
-          ExportDeclaration : `export` `default` HoistableDeclaration
-
-          ExportDeclaration : `export` `default` ClassDeclaration
-
-          ExportDeclaration : `export` `default` AssignmentExpression `;`
-        </emu-grammar>
-        <emu-alg>
-          1. Return &laquo; *"default"* &raquo;.
-        </emu-alg>
-        <emu-grammar>NamedExports : `{` `}`</emu-grammar>
-        <emu-alg>
-          1. Return a new empty List.
-        </emu-alg>
-        <emu-grammar>ExportsList : ExportsList `,` ExportSpecifier</emu-grammar>
-        <emu-alg>
-          1. Let _names_ be the ExportedNames of |ExportsList|.
-          1. Append to _names_ the elements of the ExportedNames of |ExportSpecifier|.
-          1. Return _names_.
-        </emu-alg>
-        <emu-grammar>ExportSpecifier : IdentifierName</emu-grammar>
-        <emu-alg>
-          1. Return a List whose sole element is the StringValue of |IdentifierName|.
-        </emu-alg>
-        <emu-grammar>ExportSpecifier : IdentifierName `as` IdentifierName</emu-grammar>
-        <emu-alg>
-          1. Return a List whose sole element is the StringValue of the second |IdentifierName|.
-        </emu-alg>
       </emu-clause>
 
       <emu-clause id="sec-exports-static-semantics-exportentries">
